--- a/pages/translations/fr/LC_MESSAGES/messages.po
+++ b/pages/translations/fr/LC_MESSAGES/messages.po
@@ -2,6 +2,10 @@
 msgid "Knowledge graph applications"
 msgstr "Applications des graphes de connaissances"
 
+#: /content/amp-dev/index-2021.html:6
+msgid "Knowledge graph applications for industry, science and government."
+msgstr "Applications de graphes de connaissances pour l’industrie, la science et le gouvernement."
+
 #: /content/amp-dev/index-2021.html:10
 msgid "Electronic Labels"
 msgstr "Étiquettes électroniques"
@@ -103,28 +107,28 @@ msgid "Define product identity and impede counterfeits"
 msgstr "Définir l’identité du produit et empêcher les contrefaçons"
 
 #: /content/amp-dev/index-2021.html:52
-msgid "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
-msgstr "Utilisez l’identité électronique des produits pour empêcher les produits et les réclamations contrefaits. Créez une nouvelle étiquette en combinant les étiquettes existantes et en ajoutant de nouvelles informations. Améliorez l’automatisation des machines en utilisant des données structurées pour contrôler les opérations des machines. Exemple : équipement agricole calibré par des formulations chimiques et des conditions environnementales."
+msgid "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example&#x3a; agriculture equipment calibrated by chemical formulations and environmental conditions."
+msgstr "Utilisez l’identité électronique des produits pour empêcher les produits et les réclamations contrefaits. Créez une nouvelle étiquette en combinant les étiquettes existantes et en ajoutant de nouvelles informations. Améliorez l’automatisation des machines en utilisant des données structurées pour contrôler les opérations des machines. Exemple &#x3a; équipement agricole calibré par des formulations chimiques et des conditions environnementales."
 
 #: /content/amp-dev/index-2021.html:54
 msgid "Be a friend to Authorities"
 msgstr "Soyez l'ami des autorités"
 
 #: /content/amp-dev/index-2021.html:55
-msgid "Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
-msgstr "Le passeport produit est un compagnon électronique des documents papier tels qu'une facture, un connaissement et une fiche de données de sécurité. Les autorités ont des règles et tarifs locaux spécifiques. Exemples : États-Unis/Californie, Union européenne, Grande-Bretagne, Arabie Saoudite, Inde. Product Passport permet une vérification automatisée des règles mondiales et locales pour les importations et les exportations."
+msgid "Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples&#x3a; USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
+msgstr "Le passeport produit est un compagnon électronique des documents papier tels qu'une facture, un connaissement et une fiche de données de sécurité. Les autorités ont des règles et tarifs locaux spécifiques. Exemples &#x3a; États-Unis/Californie, Union européenne, Grande-Bretagne, Arabie Saoudite, Inde. Product Passport permet une vérification automatisée des règles mondiales et locales pour les importations et les exportations."
 
 #: /content/amp-dev/index-2021.html:57
 msgid "Open standards & open data research"
 msgstr "Normes ouvertes et recherche de données ouvertes"
 
 #: /content/amp-dev/index-2021.html:58
-msgid "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
-msgstr "Transformez les données d’études scientifiques individuelles en référentiels de données partagés. Découvrez de nouvelles solutions en comparant les données de plusieurs études. Les organisations nationales synchronisent la recherche locale et internationale. Exemple : FDI-USA partage des données avec FDI-CAN (Canada), FDI-GBR (Grande-Bretagne), FDI-SAU (Arabie saoudite), FDI-IND (Inde) et d'autres."
+msgid "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example&#x3a; FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
+msgstr "Transformez les données d’études scientifiques individuelles en référentiels de données partagés. Découvrez de nouvelles solutions en comparant les données de plusieurs études. Les organisations nationales synchronisent la recherche locale et internationale. Exemple &#x3a; FDI-USA partage des données avec FDI-CAN (Canada), FDI-GBR (Grande-Bretagne), FDI-SAU (Arabie saoudite), FDI-IND (Inde) et d'autres."
 
 #: /content/amp-dev/index-2021.html:163
-msgid "New technology should aspire to accomplish two goals:"
-msgstr "Les nouvelles technologies devraient aspirer à atteindre deux objectifs :"
+msgid "New technology should aspire to accomplish two goals&#x3a;"
+msgstr "Les nouvelles technologies devraient aspirer à atteindre deux objectifs &#x3a;"
 
 #: /content/amp-dev/index-2021.html:165
 msgid "Take an existing business process and significantly reduce its total cost of implementation."
